Worked on navigation bar

--- a/index.html
+++ b/index.html
@@ -16,18 +16,46 @@
         </div>
         <div class="navigation">
             <div class="logo">
+                <img src="./icons/view-dashboard-variant.png" alt="Dashboard icon">
                 <h2>Dashboard</h2>
             </div>
-            <ul>
-                <li>Home</li>
-                <li>Profile</li>
-                <li>Messages</li>
-                <li>History</li>
-                <li>Tasks</li>
-                <li>Communities</li>
-                <li>Settings</li>
-                <li>Support</li>
-                <li>Privacy</li>
+            <ul class="nav-list">
+                <div class="nav-item">
+                    <img src="./icons/home-outline.png" alt="Home icon">
+                    <li>Home</li>
+                </div>
+                <div class="nav-item">
+                    <img src="./icons/account.png" alt="Profile icon">
+                    <li>Profile</li>
+                </div>
+                <div class="nav-item">
+                    <img src="./icons/message-text-outline.png" alt="Messages icon">
+                    <li>Messages</li>
+                </div>
+                <div class="nav-item">
+                    <img src="./icons/history.png" alt="History icon">
+                    <li>History</li>
+                </div>
+                <div class="nav-item">
+                    <img src="./icons/clipboard-text.png" alt="Tasks icon">
+                    <li>Tasks</li>
+                </div>
+                <div class="nav-item">
+                    <img src="./icons/account-group-outline.png" alt="Communities icon">
+                    <li>Communities</li>
+                </div>
+                <div class="nav-item">
+                    <img src="./icons/cog.png" alt="Settings icon">
+                    <li>Settings</li>
+                </div>
+                <div class="nav-item">
+                    <img src="./icons/help.png" alt="Support icon">
+                    <li>Support</li>
+                </div>
+                <div class="nav-item">
+                    <img src="./icons/cancel.png" alt="Privacy icon">
+                    <li>Privacy</li>
+                </div>                
             </ul>
         </div>
         <div class="main">
