Reworked styles. Added dummy content

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <div class="wrapper">
         <div class="header">
             <div class="search">
-                <input type="text" placeholder="Search" class="search">
+                <img src="./icons/magnify.png" alt="magnifying class icon">
+                <input type="text" placeholder="Search" id="searchbar">
             </div>
         </div>
         <div class="navigation">
@@ -58,18 +59,64 @@
                 </div>                
             </ul>
         </div>
-        <div class="main">            
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-        </div>
-        <div class="aside">
-            <div class="card"></div>
-            <div class="card"></div>
-        </div>
+        <div class="content">
+            <div class="main">
+                <h3>Projects</h3>
+                <div class="cards">
+                    <div class="card">
+                        <h4>Super Cool Project</h4>
+                    </div>
+                    <div class="card">
+                        <h4>Less Cool Project</h4>
+                    </div>
+                    <div class="card">
+                        <h4>Impossible App</h4>
+                    </div>
+                    <div class="card">
+                        <h4>Easy Peasy App</h4>
+                    </div>
+                    <div class="card">
+                        <h4>Ad Blocker</h4>
+                    </div>
+                    <div class="card">
+                        <h4>Money Maker</h4>
+                    </div>
+                </div>
+            </div>
+            <div class="aside">
+                <div class="announcements">
+                    <h3>Announcements</h3>
+                    <div class="card">
+                        <h4>Heading</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Corporis, cumque!.</p>
+                        <h4>Heading</h4>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                            Aspernatur, laboriosam delectus voluptatem optio distinctio inventore.</p>
+                        <h4>Heading</h4>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                            Vitae aliquam asperiores corrupti
+                            accusantium pariatur aperiam ab,
+                            a doloremque recusandae quisquam.</p>                                       
+                    </div>
+                </div>
+                <div class="trending">
+                    <h3>Trending</h3>
+                    <div class="card">
+                        <h4>Heading</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Corporis, cumque!.</p>
+                        <h4>Heading</h4>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                            Aspernatur, laboriosam delectus voluptatem optio distinctio inventore.</p>
+                        <h4>Heading</h4>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                            Vitae aliquam asperiores corrupti
+                            accusantium pariatur aperiam ab,
+                            a doloremque recusandae quisquam.</p>                                       
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
