Added content, reworked styles

--- a/index.html
+++ b/index.html
@@ -59,61 +59,112 @@
                 </div>                
             </ul>
         </div>
+
         <div class="content">
             <div class="main">
                 <h3>Projects</h3>
                 <div class="cards">
                     <div class="card">
-                        <h4>Super Cool Project</h4>
+                        <div class="card-item">
+                            <h4>Super Cool Project</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                Reprehenderit nobis fugit consequatur sed odit autem quis voluptatum, deserunt sequi illo!</p>
+                        </div>
+                        <div class="card-icons">
+                            <img src="./icons/star-outline.png" alt="favorite">
+                            <img src="./icons/eye-outline.png" alt="eye">
+                            <img src="./icons/share-variant-outline.png" alt="share">
+                        </div>
                     </div>
                     <div class="card">
-                        <h4>Less Cool Project</h4>
+                        <div class="card-item">
+                            <h4>Less Cool Project</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                Reprehenderit nobis fugit consequatur sed odit autem quis voluptatum, deserunt sequi illo!</p>
+                        </div>
+                        <div class="card-icons">
+                            <img src="./icons/star-outline.png" alt="favorite">
+                            <img src="./icons/eye-outline.png" alt="eye">
+                            <img src="./icons/share-variant-outline.png" alt="share">
+                        </div>
                     </div>
                     <div class="card">
-                        <h4>Impossible App</h4>
+                        <div class="card-item">
+                            <h4>Impossible App</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                Reprehenderit nobis fugit consequatur sed odit autem quis voluptatum, deserunt sequi illo!</p>
+                        </div>
+                        <div class="card-icons">
+                            <img src="./icons/star-outline.png" alt="favorite">
+                            <img src="./icons/eye-outline.png" alt="eye">
+                            <img src="./icons/share-variant-outline.png" alt="share">
+                        </div>
                     </div>
                     <div class="card">
-                        <h4>Easy Peasy App</h4>
+                        <div class="card-item">
+                            <h4>Easy Peasy App</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                Reprehenderit nobis fugit consequatur sed odit autem quis voluptatum, deserunt sequi illo!</p>
+                        </div>
+                        <div class="card-item">
+                            <img src="./icons/star-outline.png" alt="favorite">
+                            <img src="./icons/eye-outline.png" alt="eye">
+                            <img src="./icons/share-variant-outline.png" alt="share">
+                        </div>
                     </div>
                     <div class="card">
-                        <h4>Ad Blocker</h4>
+                        <div class="card-item">
+                            <h4>Ad Blocker</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                Reprehenderit nobis fugit consequatur sed odit autem quis voluptatum, deserunt sequi illo!</p>
+                        </div>
+                        <div class="card-icons">
+                            <img src="./icons/star-outline.png" alt="favorite">
+                            <img src="./icons/eye-outline.png" alt="eye">
+                            <img src="./icons/share-variant-outline.png" alt="share">
+                        </div>
                     </div>
                     <div class="card">
-                        <h4>Money Maker</h4>
+                        <div class="card-item">
+                            <h4>Money Maker</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                Reprehenderit nobis fugit consequatur sed odit autem quis voluptatum, deserunt sequi illo!</p>
+                        </div>
+                        <div class="card-icons">
+                            <img src="./icons/star-outline.png" alt="favorite">
+                            <img src="./icons/eye-outline.png" alt="eye">
+                            <img src="./icons/share-variant-outline.png" alt="share">
+                        </div>
                     </div>
                 </div>
             </div>
+
             <div class="aside">
                 <div class="announcements">
                     <h3>Announcements</h3>
                     <div class="card">
-                        <h4>Heading</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Corporis, cumque!.</p>
-                        <h4>Heading</h4>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                            Aspernatur, laboriosam delectus voluptatem optio distinctio inventore.</p>
-                        <h4>Heading</h4>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                            Vitae aliquam asperiores corrupti
-                            accusantium pariatur aperiam ab,
-                            a doloremque recusandae quisquam.</p>                                       
+                        <div class="card-item">
+                            <h4>Announcement 1</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Corporis, cumque!.</p>
+                        </div>
+                        <div class="card-item">
+                            <h4>Announcement 2</h4>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                Aspernatur, laboriosam delectus voluptatem optio distinctio inventore.</p>
+                        </div>
+                        <div class="card-item">
+                            <h4>Announcement 3</h4>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                Vitae aliquam asperiores corrupti
+                                accusantium pariatur aperiam ab,
+                                a doloremque recusandae quisquam.</p>
+                        </div>                                       
                     </div>
                 </div>
                 <div class="trending">
                     <h3>Trending</h3>
                     <div class="card">
-                        <h4>Heading</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Corporis, cumque!.</p>
-                        <h4>Heading</h4>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                            Aspernatur, laboriosam delectus voluptatem optio distinctio inventore.</p>
-                        <h4>Heading</h4>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                            Vitae aliquam asperiores corrupti
-                            accusantium pariatur aperiam ab,
-                            a doloremque recusandae quisquam.</p>                                       
                     </div>
                 </div>
             </div>
