--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
                 <img src="./icons/magnify.png" alt="magnifying class icon">
                 <input type="text" placeholder="Search" id="searchbar">
             </div>
+            <div class="profile">
+                <img src="./IMG_20220731_101433.jpg" alt="profile picture">
+                <button><p>New</p></button>
+                <button><p>Share</p></button>
+                <button><p>Upload</p></button>
+            </div>
         </div>
         <div class="navigation">
             <div class="logo">
@@ -106,7 +112,7 @@
                             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                                 Reprehenderit nobis fugit consequatur sed odit autem quis voluptatum, deserunt sequi illo!</p>
                         </div>
-                        <div class="card-item">
+                        <div class="card-icons">
                             <img src="./icons/star-outline.png" alt="favorite">
                             <img src="./icons/eye-outline.png" alt="eye">
                             <img src="./icons/share-variant-outline.png" alt="share">
@@ -165,6 +171,18 @@
                 <div class="trending">
                     <h3>Trending</h3>
                     <div class="card">
+                        <div class="card-item">
+                            <img src="./icons/guitar.svg" alt="guitar">
+                            <p>This is a guitar</p>
+                        </div>
+                        <div class="card-item">
+                            <img src="./icons/carnival.svg" alt="jester hat">
+                            <p>This is a jester's hat</p>
+                        </div>
+                        <div class="card-item">
+                            <img src="./icons/pumpkin.svg" alt="pumpkin">
+                            <p>This is a halloween pumpkin</p>
+                        </div>
                     </div>
                 </div>
             </div>
